tree-sitter-command-cad-model/test/corpus/closure.txt
==================
Empty
==================

() -> std.None: "" 

---

(source_file
  (expression
    (closure_definition
      (struct_definition)
        (expression
          (member_access
            (expression
              (identifier))
            (identifier)))
        (expression
          (string)))))

==================
With argument
==================

(argument: std.types.UInt) -> std.None: "" 

---

(source_file
  (expression
    (closure_definition
      (struct_definition
        (struct_member
          (identifier)
          (declaration_type
            (expression
              (member_access
                (expression
                  (member_access
                    (expression
                      (identifier))
                    (identifier)))
                (identifier))))))
      (expression
        (member_access
          (expression
            (identifier))
          (identifier)))
      (expression
        (string)))))

==================
With Binary Expression
==================

(argument: std.types.UInt) -> std.None: a + b 

---

(source_file
  (expression
    (closure_definition
      (struct_definition
        (struct_member
          (identifier)
          (declaration_type
            (expression
              (member_access
                (expression
                  (member_access
                    (expression
                      (identifier))
                    (identifier)))
                (identifier))))))
      (expression
        (member_access
          (expression
            (identifier))
          (identifier)))
      (expression
        (binary_expression
          (expression
            (identifier))
          (expression
            (identifier)))))))

==================
Call function
==================

value(a = b)

---

(source_file
  (expression
    (function_call
      (expression
        (identifier))
      (dictionary_construction
        (dictionary_argument
          (expression
            (identifier))
          (expression
            (identifier)))))))

==================
Call method deep in tree
==================

value.value::method(a = b)

---

(source_file
  (expression
    (method_call
      (expression
        (member_access
          (expression
            (identifier))
          (identifier)))
      (identifier)
      (dictionary_construction
        (dictionary_argument
          (expression
            (identifier))
          (expression
            (identifier)))))))

==================
Call method
==================

value::method(a = b)

---

(source_file
  (expression
    (method_call
      (expression
        (identifier))
      (identifier)
      (dictionary_construction
        (dictionary_argument
          (expression
            (identifier))
          (expression
            (identifier)))))))

==================
Call method deep in tree
==================

value::foo(a = b)

---

(source_file
  (expression
    (method_call
      (expression
        (identifier))
      (identifier)
      (dictionary_construction
        (dictionary_argument
          (expression
            (identifier))
          (expression
            (identifier)))))))

==================
Call no arguments
==================

value()

---

(source_file
  (expression
    (function_call
      (expression
        (identifier))
      (dictionary_construction))))

==================
Call function positional
==================

value(a, b, c)

---

(source_file
  (expression
    (function_call
      (expression
        (identifier))
      (dictionary_construction
        (dictionary_argument
          (expression
            (identifier)))
        (dictionary_argument
          (expression
            (identifier)))
        (dictionary_argument
          (expression
            (identifier)))))))

==================
Call function mixed
==================

value(a, b = c, d = e)

---

(source_file
  (expression
    (function_call
      (expression
        (identifier))
      (dictionary_construction
        (dictionary_argument
          (expression
            (identifier)))
        (dictionary_argument
          (expression
            (identifier))
          (expression
            (identifier)))
        (dictionary_argument
          (expression
            (identifier))
          (expression
            (identifier)))))))

==================
Call method positional
==================

value::value(a, b)

---

(source_file
  (expression
    (method_call
      (expression
        (identifier))
      (identifier)
      (dictionary_construction
        (dictionary_argument
          (expression
            (identifier)))
        (dictionary_argument
          (expression
            (identifier)))))))

==================
Call method mixed
==================

value::value(a, b = c)

---

(source_file
  (expression
    (method_call
      (expression
        (identifier))
      (identifier)
      (dictionary_construction
        (dictionary_argument
          (expression
            (identifier)))
        (dictionary_argument
          (expression
            (identifier))
          (expression
            (identifier)))))))

==================
Call function complex expressions
==================

value(a + b, c * d)

---

(source_file
  (expression
    (function_call
      (expression
        (identifier))
      (dictionary_construction
        (dictionary_argument
          (expression
            (binary_expression
              (expression
                (identifier))
              (expression
                (identifier)))))
        (dictionary_argument
          (expression
            (binary_expression
              (expression
                (identifier))
              (expression
                (identifier)))))))))

==================
Call method complex expressions
==================

obj::method(a + b, c = d * e)

---

(source_file
  (expression
    (method_call
      (expression
        (identifier))
      (identifier)
      (dictionary_construction
        (dictionary_argument
          (expression
            (binary_expression
              (expression
                (identifier))
              (expression
                (identifier)))))
        (dictionary_argument
          (expression
            (identifier))
          (expression
            (binary_expression
              (expression
                (identifier))
              (expression
                (identifier)))))))))

==================
Call function nested dictionary positional
==================

func((a = b, c = d))

---

(source_file
  (expression
    (function_call
      (expression
        (identifier))
      (dictionary_construction
        (dictionary_argument
          (expression
            (dictionary_construction
              (dictionary_argument
                (expression
                  (identifier))
                (expression
                  (identifier)))
              (dictionary_argument
                (expression
                  (identifier))
                (expression
                  (identifier))))))))))
