tree-sitter-command-cad-model/test/corpus/dictionary_construction.txt
==================
Empty
==================

()

---

(source_file
  (expression
    (dictionary_construction)))

==================
One
==================

(a =b)

---

(source_file
  (expression
    (dictionary_construction
      (dictionary_argument
        (expression
          (identifier))
        (expression
          (identifier))))))

==================
One,
==================

(a =b,)

---

(source_file
  (expression
    (dictionary_construction
      (dictionary_argument
        (expression
          (identifier))
        (expression
          (identifier))))))

==================
One, two
==================

(a =b, c =d)

---

(source_file
  (expression
    (dictionary_construction
      (dictionary_argument
        (expression
          (identifier))
        (expression
          (identifier)))
      (dictionary_argument
        (expression
          (identifier))
        (expression
          (identifier))))))

==================
One, two,
==================

(a =b, c =d,)

---

(source_file
  (expression
    (dictionary_construction
      (dictionary_argument
        (expression
          (identifier))
        (expression
          (identifier)))
      (dictionary_argument
        (expression
          (identifier))
        (expression
          (identifier))))))

==================
Positional Two
==================

(a, b)

---

(source_file
  (expression
    (dictionary_construction
      (dictionary_argument
        (expression
          (identifier)))
      (dictionary_argument
        (expression
          (identifier))))))

==================
Positional Trailing Comma
==================

(a, b,)

---

(source_file
  (expression
    (dictionary_construction
      (dictionary_argument
        (expression
          (identifier)))
      (dictionary_argument
        (expression
          (identifier))))))

==================
Mixed Positional and Named
==================

(a, b =c)

---

(source_file
  (expression
    (dictionary_construction
      (dictionary_argument
        (expression
          (identifier)))
      (dictionary_argument
        (expression
          (identifier))
        (expression
          (identifier))))))

==================
Mixed Three Positional Two Named
==================

(a, b, c =d, e =f)

---

(source_file
  (expression
    (dictionary_construction
      (dictionary_argument
        (expression
          (identifier)))
      (dictionary_argument
        (expression
          (identifier)))
      (dictionary_argument
        (expression
          (identifier))
        (expression
          (identifier)))
      (dictionary_argument
        (expression
          (identifier))
        (expression
          (identifier))))))

==================
Mixed Trailing Comma
==================

(a, b =c,)

---

(source_file
  (expression
    (dictionary_construction
      (dictionary_argument
        (expression
          (identifier)))
      (dictionary_argument
        (expression
          (identifier))
        (expression
          (identifier))))))
