tree-sitter-command-cad-model/test/corpus/errors.txt
==================
Missing second operand
==================

a +

---

(source_file
  (expression
    (binary_expression
      (expression
        (identifier))
      (expression
        (MISSING identifier)))))
