tree-sitter-command-cad-model/test/corpus/variable_paths.txt
==================
Variable Path
==================

this.is.a.test

---

(source_file
  (expression
    (member_access
      (expression
        (member_access
          (expression
            (member_access
              (expression
                (identifier))
              (identifier)))
          (identifier)))
      (identifier))))

==================
Self Path
==================

self.this.is.a.test

---

(source_file
  (expression
    (member_access
      (expression
        (member_access
          (expression
            (member_access
              (expression
                (member_access
                  (expression
                    (self))
                  (identifier)))
              (identifier)))
          (identifier)))
      (identifier))))
